--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.0.*",
         "symfony/console": "5.0.*",
-        "symfony/dotenv": "5.0.*",
+        "symfony/dotenv": "^5.0",
         "symfony/expression-language": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.0.*",
@@ -30,6 +30,7 @@
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
         "symfony/debug-pack": "^1.0",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
