register with email validation

--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=72672cbe3b541659872592257379cd59
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://c9b0e168394b05:e49da1659e52ce@smtp.mailtrap.io:2525/?encryption=ssl&auth_mode=login
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
