--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "egulias/email-validator": "^2.1",
         "sensio/framework-extra-bundle": "^5.1",
+        "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.0.*",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "^5.0",
