--- a/.env
+++ b/.env
@@ -29,5 +29,5 @@ MAILER_DSN=smtp://c9b0e168394b05:e49da1659e52ce@smtp.mailtrap.io:2525/?encryptio
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:root@db:3306/my_quizz?serverVersion=5.7
+DATABASE_URL=mysql://root:Obrigada@localhost:3306/my_quizz?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
